@startuml

class CatmullRomSpline {
    -__points
    
    -__calcVal()
    -__getValue()
    
    +__init__(points: int[])
    +getKeyPoints()
    +plot()
}

interface ToolOperater{
 -レイヤークラス
 +setLayer()
 -LButtonDown()
 -LButtonUp()
 -LButtonMove()
 -RButtonDown()
 -RButtonUp()
 -RButtonMove()
 -mouseMove()
}

class Layer{
    
}

class CVInput {
 -StrokeManager
 
 +__init__()
 +mouseCallback()
 -LButtonDown()
 -LButtonUp()
 -LButtonMove()
 -RButtonDown()
 -RButtonUp()
 -RButtonMove()
 -mouseMove()
}
class StrokeManager {
    -カーブのリスト
    
    +線を追加()
    +線を削除()
    +触れてる線のインデックス取得()
    
    +近くの制御点と線のインデックス取得()
    +1つの線の点を移動する（線idx, point_idx）()
}




class CVdrawer{
    +dotc()
    +circle()
    +line()
    +rectangle()
}

CVInput "1" *-- "1" StrokeManager
StrokeManager "1" o-- "0...n" CatmullRomSpline


@enduml


ActivityDiamondFontSize

入力→
    ペン
    ブラシ
    スポイト
    塗りつぶし
    矩形選択